other(config): Disabled bAllowFireLaser

--- a/System/MutVisibleSpecsX.ini
+++ b/System/MutVisibleSpecsX.ini
@@ -4,6 +4,6 @@ SpectatorModel=1
 ZapProjSpeed=1000.000000
 LaserRefireRate=1.000000
 ZapTime=0.5
-bAllowFireLaser=True
+bAllowFireLaser=False
 bLaserZapEnemy=False
 ZapHealDamage=5
