--- a/.github/workflows/auto_changelog.yml
+++ b/.github/workflows/auto_changelog.yml
@@ -24,7 +24,16 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Trigger Changelog
+        id: changelog
         uses: ardalanamini/auto-changelog@master
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           exclude: ''
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          body: |
+            ${{ steps.changelog.outputs.changelog }}
