other(config): Added alternative join link & fixed color tags for ServerDetails

--- a/System/CustomServerDetails.ini
+++ b/System/CustomServerDetails.ini
@@ -19,11 +19,12 @@ infoBlockKeys=(detail="Zeds left",key="zedsLeft")
 infoBlockKeys=(detail="Trader time",key="traderTime")
 infoBlockKeys=(detail="CurrentWave",key="waveCurrent")
 infoBlockKeys=(detail="Waves total",key="wavesTotal")
+displayedServerDetails=(name="Alternative Join Address",keyTag="^c",valTag="^o",bCustom=True,customValue="nn.h4ck.me:7707")
 displayedServerDetails=(name="IsVacSecured",keyTag="^c",valTag="^o",bChangeName=True,newName="VAC")
 displayedServerDetails=(name="AdminEmail",keyTag="^c",valTag="^o",bChangeName=True,newName="Admin Email")
 displayedServerDetails=(name="AdminName",keyTag="^c",valTag="^o",bChangeName=True,newName="Admin Name")
 displayedServerDetails=(name="MaxSpectators",keyTag="^c",valTag="^o",bChangeName=True,newName="Max Spectators")
-displayedServerDetails=(name="Interested in our Cult?",keyTag="^y",valTag="^v",bCustom=True,customValue="Join the Steam Group")
+displayedServerDetails=(name="Interested in our Cult?",keyTag="^g",valTag="^g",bCustom=True,customValue="Join the Steam Group")
 displayedServerDetails=(valTag="^r",bCustom=True,customValue="/nanu-nanu")
 playerDeadNicknamePattern=%nickname% ^g[DEAD]
 playerSpectatingNicknamePattern=%nickname% ^g[SPECTATING]
