feat(MUTATOR): Re-introduced SoundBoard mutator
- Updated MutLoaderV2 config

--- a/System/MutLoaderV2.ini
+++ b/System/MutLoaderV2.ini
@@ -37,6 +37,7 @@ Mutator=ServerAchievements.SAMutator
 Mutator=PlayerDataStoreMut.PlayerDataStoreMut
 Mutator=ColorfulHUD.ColorfulHUD
 Mutator=ChatIconV2.ChatIconV2
+Mutator=KFSoundBoard.KFSoundBoard
 Mutator=HUDEffects.HUDEffects
 
 [Settings3 MutLoaderObject]
@@ -68,6 +69,7 @@ Mutator=ServerAchievements.SAMutator
 Mutator=PlayerDataStoreMut.PlayerDataStoreMut
 Mutator=ColorfulHUD.ColorfulHUD
 Mutator=ChatIconV2.ChatIconV2
+Mutator=KFSoundBoard.KFSoundBoard
 Mutator=HUDEffects.HUDEffects
 
 [Settings4 MutLoaderObject]
@@ -99,6 +101,7 @@ Mutator=ServerAchievements.SAMutator
 Mutator=PlayerDataStoreMut.PlayerDataStoreMut
 Mutator=ColorfulHUD.ColorfulHUD
 Mutator=ChatIconV2.ChatIconV2
+Mutator=KFSoundBoard.KFSoundBoard
 Mutator=HUDEffects.HUDEffects
 
 [Settings5 MutLoaderObject]
@@ -131,6 +134,7 @@ Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=PlayerDataStoreMut.PlayerDataStoreMut
 Mutator=ColorfulHUD.ColorfulHUD
 Mutator=ChatIconV2.ChatIconV2
+Mutator=KFSoundBoard.KFSoundBoard
 Mutator=HUDEffects.HUDEffects
 
 [Settings6 MutLoaderObject]
@@ -163,6 +167,7 @@ Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=PlayerDataStoreMut.PlayerDataStoreMut
 Mutator=ColorfulHUD.ColorfulHUD
 Mutator=ChatIconV2.ChatIconV2
+Mutator=KFSoundBoard.KFSoundBoard
 Mutator=HUDEffects.HUDEffects
 
 [Settings7 MutLoaderObject]
@@ -195,4 +200,5 @@ Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=PlayerDataStoreMut.PlayerDataStoreMut
 Mutator=ColorfulHUD.ColorfulHUD
 Mutator=ChatIconV2.ChatIconV2
+Mutator=KFSoundBoard.KFSoundBoard
 Mutator=HUDEffects.HUDEffects
