config: Added KFPatcher to GameModes

--- a/System/MutLoaderV2.ini
+++ b/System/MutLoaderV2.ini
@@ -39,6 +39,7 @@ Mutator=ColorfulHUD.ColorfulHUD
 Mutator=ChatIconV2.ChatIconV2
 Mutator=KFSoundBoard.KFSoundBoard
 Mutator=HUDEffects.HUDEffects
+Mutator=KFPatcher.mut
 
 [Settings3 MutLoaderObject]
 sGameTypeName=KFGameType
@@ -71,6 +72,7 @@ Mutator=ColorfulHUD.ColorfulHUD
 Mutator=ChatIconV2.ChatIconV2
 Mutator=KFSoundBoard.KFSoundBoard
 Mutator=HUDEffects.HUDEffects
+Mutator=KFPatcher.mut
 
 [Settings4 MutLoaderObject]
 sGameTypeName=KFGameType
@@ -103,6 +105,7 @@ Mutator=ColorfulHUD.ColorfulHUD
 Mutator=ChatIconV2.ChatIconV2
 Mutator=KFSoundBoard.KFSoundBoard
 Mutator=HUDEffects.HUDEffects
+Mutator=KFPatcher.mut
 
 [Settings5 MutLoaderObject]
 sGameTypeName=NFNGameType
@@ -136,6 +139,7 @@ Mutator=ColorfulHUD.ColorfulHUD
 Mutator=ChatIconV2.ChatIconV2
 Mutator=KFSoundBoard.KFSoundBoard
 Mutator=HUDEffects.HUDEffects
+Mutator=KFPatcher.mut
 
 [Settings6 MutLoaderObject]
 sGameTypeName=NFNGameType
@@ -169,6 +173,7 @@ Mutator=ColorfulHUD.ColorfulHUD
 Mutator=ChatIconV2.ChatIconV2
 Mutator=KFSoundBoard.KFSoundBoard
 Mutator=HUDEffects.HUDEffects
+Mutator=KFPatcher.mut
 
 [Settings7 MutLoaderObject]
 sGameTypeName=NFNGameType
@@ -202,3 +207,4 @@ Mutator=ColorfulHUD.ColorfulHUD
 Mutator=ChatIconV2.ChatIconV2
 Mutator=KFSoundBoard.KFSoundBoard
 Mutator=HUDEffects.HUDEffects
+Mutator=KFPatcher.mut
